syntax = "proto3";

package NUgc.NSchema;

// Next field: 2
message TDeviceProfileInternal {
    string DeviceID = 1;
}
